--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
-target_sources(SFMLTest PRIVATE App.cpp SceneManager.cpp)
+target_sources(FallingBlocks PRIVATE App.cpp SceneManager.cpp)
 add_subdirectory(scenes)
