wtf am i even doing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,4 @@
 target_sources(FallingBlocks PRIVATE App.cpp SceneManager.cpp)
 add_subdirectory(scenes)
+add_subdirectory(entities)
+add_subdirectory(managers)
