ECS Systems - Working examples

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
-target_sources(FallingBlocks PUBLIC App.cpp Entity.inl)
+target_sources(FallingBlocks PUBLIC App.cpp Entity.cpp)
 add_subdirectory(managers)
+add_subdirectory(systems)
