--- a/ecs/CMakeLists.txt
+++ b/ecs/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(ECS World.hpp query/Query.hpp query/Data.hpp query/Filter.hpp)
+add_library(ECS World.hpp query/Query.hpp query/Data.hpp query/Filter.hpp Commands.hpp Global.hpp System.hpp Archetype.hpp)
