--- a/ecs/CMakeLists.txt
+++ b/ecs/CMakeLists.txt
@@ -1,1 +1,6 @@
-add_library(ECS World.hpp query/Query.hpp query/Data.hpp query/Filter.hpp Commands.hpp Global.hpp System.hpp Archetype.hpp)
+add_library(ECS World.cpp ECS.hpp Archetype.hpp Archetype.inl Commands.hpp Commands.inl CommandsImpl.hpp EntityEdit.hpp Global.hpp World.hpp World.inl)
+add_subdirectory(query)
+
+target_include_directories(ECS PUBLIC .)
+
+target_link_libraries(ECS PUBLIC Boost::core)
